# gismlops

./: .gitignore  .logs.dvc  .pre-commit-config.yaml  README.md  TODO  data.dvc  exam.md  lightning_logs.dvc  logs.dvc  outputs.dvc  pyproject.toml  run_server.sh  wandb.dvc
.dvc/: config
.github/workflows/: pre-commit.yml  pytest.yml
gismlops/: __init__.py  commands.py  config.py  data.py  dvc_manager.py  git_manager.py  infer.py  main.py  model.py  server.py  train.py  utils.py
gismlops/conf/: config.yaml
gismlops/server/: build.sh  server.py  start.sh
gismlops/tests/: predict_test.py
outputs/2023-10-21/22-46-49/.hydra/: hydra.yaml
outputs/2023-10-21/23-05-29/.hydra/: hydra.yaml
outputs/2023-10-22/01-36-39/.hydra/: hydra.yaml
outputs/2023-10-22/01-37-53/.hydra/: hydra.yaml
outputs/2023-10-22/01-38-48/.hydra/: hydra.yaml
outputs/2023-10-22/02-09-13/.hydra/: hydra.yaml
outputs/2023-10-22/02-10-07/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-22/02-10-11/.hydra/: hydra.yaml
outputs/2023-10-22/02-10-17/.hydra/: hydra.yaml
outputs/2023-10-22/02-10-26/.hydra/: hydra.yaml
outputs/2023-10-22/02-10-30/.hydra/: hydra.yaml
server/: build.sh  docker-compose.yml  model2mlflow.py  run.sh  start.sh  test.py
tracking-server/: mlflow.conf
triton/: README.md  client.py  docker-compose.yml  tmp
triton/model_repository/onnx-clothing/: config.pbtxt
