[tool.poetry]
name = "gismlops"
version = "0.0.1"
description = ""
authors = ["Gordei Egorov <gordeiegorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}

[tool.poetry.dev-dependencies]
pre-commit = "3.4.0"
pytest = "7.4.2"

[tool.poetry.scripts]
learn = "gismlops.main:start"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
